{{$NEXT}}

0.018     2020-12-29 15:29:31-08:00 America/Los_Angeles

    - Fix windows bug

0.017     2020-12-28 23:26:25-08:00 America/Los_Angeles

    - Fix off-by-1 bug in get_line_burst_or_data
    - Pick a better default read size
    - Make read size configurable
    - expose fill_buffer()

0.016     2020-12-25 23:43:43-08:00 America/Los_Angeles

    - MASSIVE PERFORMANCE IMPROVEMENTS
    - Rewrite to use an internal buffer to reduce sysread calls
    - Fix incorrect assumptions about data recieved from pipe (it is always treated as bytes)
    - If internal state is messed up all future operations throw the error.

0.015     2020-12-24 19:53:36-08:00 America/Los_Angeles

    - Fix some bugs in mixed_data mode
    - Better EOF detection (not trustworthy before this fix)
    - get_line_burst_or_data fixes:
        - Return partial lines at EOF (line without newline termination)
        - Report incomplete messages or partial bursts (as exceptions)

0.014     2020-12-21 19:44:01-08:00 America/Los_Angeles

    - Add mixed_data_mode (get_line_burst_or_data)

0.013     2020-12-15 00:07:22-08:00 America/Los_Angeles

    - Add non-blocking write (*nix, and windows too!)

0.012     2020-12-13 18:30:33-08:00 America/Los_Angeles

    - Fix some tests that were breaking Test2's IPC
    - Fix missing PIPE->autoflush() on some platforms

0.011     2020-12-12 22:01:30-08:00 America/Los_Angeles

    - Fix non-blocking mode in windows
    - Single implementation of IPC tests where fork or threads are picked as
      needed.

0.010     2020-12-12 15:18:53-08:00 America/Los_Angeles

    - Fix win32

0.009     2020-12-10 22:46:18-08:00 America/Los_Angeles

    - Add fifo support

0.008     2020-12-10 20:35:19-08:00 America/Los_Angeles

    - Add write_burst, fits_in_burst(), and parts_needed()

0.007     2020-12-10 19:05:37-08:00 America/Los_Angeles

    - Fix takeover for non-linux platforms

0.006     2020-12-09 22:53:06-08:00 America/Los_Angeles
